// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User resolvers 1: the race has two users 1`] = `
Object {
  "data": Object {
    "race": Object {
      "distance": 1000,
      "id": 1,
      "users": Array [
        Object {
          "id": 1,
          "position": null,
          "username": "testguy",
        },
        Object {
          "id": 2,
          "position": null,
          "username": "testguy2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`User resolvers 2: can fetch a user with its race, location, score and updated position 1`] = `
Object {
  "data": Object {
    "user": Object {
      "id": 1,
      "location": Object {
        "distance": 0,
        "endLat": 53.12345,
        "endLong": 0.12345,
        "id": 1,
        "startLat": 53.12345,
        "startLong": 0.12345,
      },
      "position": 1,
      "race": Object {
        "distance": 1000,
        "id": 1,
      },
      "score": Object {
        "id": 1,
        "time": 300000,
      },
      "username": "testguy",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`User resolvers can fetch multiple users 1`] = `
Object {
  "data": Object {
    "users": Array [
      Object {
        "id": 2,
        "position": null,
        "username": "testguy2",
      },
      Object {
        "id": 1,
        "position": 1,
        "username": "testguy",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
